# paddleocr-mcp

./: .gitignore  AUDIT-REPORT.md  LICENSE  README.md  paddleocr_mcp_server.py  pyproject.toml  test_mcp.py  test_quick.py
skill/: SKILL.md
tests/: test_tools.py
