[project]
name = "paddleocr-mcp-server"
version = "1.0.0"
description = "MCP server for PaddleOCR — PP-OCRv6 (fast) + VL-1.6 (document parsing) with auto-routing and GPU auto-detection"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = {text = "MIT"}
authors = [
    {name = "Nicvank"},
]
keywords = ["paddleocr", "ocr", "mcp", "model-context-protocol", "document-parsing", "pp-ocrv6", "vl-1.6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "paddleocr>=3.7.0",
    "paddlex[ocr]>=3.7.0,<3.8.0",
    "paddlepaddle>=3.2.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
gpu = [
    "paddlepaddle-gpu>=3.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
paddleocr-mcp = "paddleocr_mcp_server:main"

[project.urls]
Homepage = "https://github.com/Nicvank/paddleocr-mcp"
Repository = "https://github.com/Nicvank/paddleocr-mcp"
Issues = "https://github.com/Nicvank/paddleocr-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
